overflow fixed

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,6 +3,10 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
+body,
+html {
+  overflow-x: hidden;
+}
 /* li {
   font-size: 1.8em;
 } */
